# network-security

./: .gitignore  app.py  main.py  push_data.py  pyproject.toml  test_mongodb.py
models/: model.pkl  preprocessor.pkl
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/constants/training_pipeline/: __init__.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: exception.py
src/logging/: logger.py
src/pipelines/: training_pipeline.py
src/utils/: classification_metrics.py  model_estimator.py  utils.py
