[project]
name = "network-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "certifi>=2025.6.15",
    "jupyter>=1.1.1",
    "lux-api>=0.5.1",
    "numpy>=2.1.3",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "pymongo>=4.13.2",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "ydata-profiling>=4.16.1",
]
